# universities-scraper

./: .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: codeql-analysis.yml
backend/: templates.json
backend/src/: main.py
backend/templates/: cs-internship-new.json  cs-summer-new.json  cs-summer-old.json  swe-summer-new.json  swe-summer-old.json
scripts/: install.ps1  install.sh
universities_scraper/kfupm/: banner9.py
