[tool.poetry]
name = "universities-scraper"
version = "0.0.1"
description = "A web scraping tool fetch and clean and optimize data from universities websites"
authors = ["Yokozuna59 <u.yokozuna@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "universities_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
requests = "^2.28.1"
selenium = "^4.4.3"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[mypy]
ignore_missing_imports = true
no_strict_optional = true
