[tool.poetry]
name = "universities-scraper"
version = "0.0.1"
description = "A web scraping tool fetch and clean and optimize data from universities websites"
authors = ["Yokozuna59 <u.yokozuna@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "universities_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
requests = "^2.28.2"
selenium = "^4.8.0"
beautifulsoup4 = "^4.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[mypy]
ignore_missing_imports = true
no_strict_optional = true
